examples/guestbook/manifests/guestbook/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend-service
  namespace: guestbook
  labels:
    app: guestbook-backend
    component: backend
    tier: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: guestbook-backend
