examples/guestbook/manifests/guestbook/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend-service
  namespace: guestbook
  labels:
    app: guestbook-frontend
    component: frontend
    tier: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: guestbook-frontend
